[tool.poetry]
name = "snow-ipa"
version = "2.2.0"
description = ""
authors = ["Erick G <9361923+silversky54@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
earthengine-api = "^0.1.375"
google-api-python-client = "^2.104.0"
pytz = "^2023.3.post1"
email-validator = "^2.1.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
